--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,7 +19,7 @@
 <description>Backend API con Spring Boot</description>
 
 <properties>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
 </properties>
 
 <dependencies>
@@ -52,8 +52,15 @@
 
     <dependency>
         <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-impl</artifactId>
+        <version>0.12.5</version>
+        <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>io.jsonwebtoken</groupId>
         <artifactId>jjwt-jackson</artifactId>
-        <version>0.12.3</version>
+        <version>0.12.5</version>
         <scope>runtime</scope>
     </dependency>
 
@@ -78,11 +85,14 @@
 </dependencies>
 
 <build>
+    <sourceDirectory>src/main</sourceDirectory>
+    <testSourceDirectory>src/test</testSourceDirectory>
     <plugins>
         <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
+            <mainClass>com.app.backend.BackendApplication</mainClass>
             <excludes>
                 <exclude>
                     <groupId>org.projectlombok</groupId>
